--- a/po/es.po
+++ b/po/es.po
@@ -79,7 +79,7 @@ msgstr "Cambiar elemento del menú"
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
 msgid "_Remove"
-msgstr "_Remover"
+msgstr "_Eliminar"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
