update RO translations
(Old svn revision: 4286)

--- a/po/ro.po
+++ b/po/ro.po
@@ -6,10 +6,10 @@
 
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2 rc1\n"
+"Project-Id-Version: xfce4-panel 4.2 rc3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-10 07:57+0100\n"
-"PO-Revision-Date: 2004-11-14 19:01+0200\n"
+"PO-Revision-Date: 2005-01-08 22:02+0200\n"
 "Last-Translator: Mişu Moldovan <dumol@go.ro>\n"
 "Language-Team: Romanian <gnomero-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -36,7 +36,7 @@ msgstr "Proprietăţi"
 
 #: panel/controls_dialog.c:209 panel/controls.c:711
 msgid "Removing the item will also remove its popup menu."
-msgstr "Ştergerea itemului va duce la pierderea meniul asociat."
+msgstr "Ştergerea itemului va duce la pierderea meniului asociat."
 
 #: panel/item_dialog.c:124
 msgid "Select command"
@@ -72,7 +72,7 @@ msgstr "Etichetă:"
 
 #: panel/item_dialog.c:978
 msgid "Attach menu to launcher"
-msgstr "Ataşează meniu lansatorului"
+msgstr "Ataşează un meniu lansatorului"
 
 #: panel/item_dialog.c:1198
 msgid "Change menu item"
@@ -120,21 +120,21 @@ msgstr ""
 " Panoul Xfce\n"
 " Versiunea %s\n"
 "\n"
-" Parte a Mediului Desktop Xfce\n"
+" Parte a mediului desktop Xfce\n"
 " http://www.xfce.org\n"
 "\n"
-" Licenţiat GNU GPL.\n"
+" Licenţă GNU GPL.\n"
 "\n"
 
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr "%s: Am pornit cu succes fără administrare de sesiuni"
+msgstr "%s: Am pornit cu succes fără administrator de sesiuni"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr "%s: Am pornit cu succes cu administrare de sesiuni"
+msgstr "%s: Am pornit cu succes cu administrator de sesiuni"
 
 #: panel/controls.c:666
 #, c-format
