--- a/po/hu.po
+++ b/po/hu.po
@@ -4,20 +4,20 @@
 # This file is distributed under the same license as the xfce package.
 # Somogyi Peter <jerry@gnu>, 2003.
 # Egmont Koblinger <egmont@uhulinux.hu>, 2003
+# Servitore <sas@321.hu>, 2004
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: hu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2003-07-16 16:20+0200\n"
-"Last-Translator: Egmont Koblinger <egmont@uhulinux.hu>\n"
+"PO-Revision-Date: 2005-01-10 08:51+0100\n"
+"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: KBabel 1.0.1\n"
 
 #: panel/xfce_support.c:516
 msgid "Select file"
@@ -25,26 +25,24 @@ msgstr "Fájl kiválasztása"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "Nincs adat. A panel üres lesz."
 
-#: panel/controls_dialog.c:89 panel/item_dialog.c:1157
+#: panel/controls_dialog.c:89
+#: panel/item_dialog.c:1157
 msgid "Position:"
-msgstr "Elhelyezés:"
+msgstr "Helyzet:"
 
 #: panel/controls_dialog.c:155
-#, fuzzy
 msgid "Item properties"
-msgstr "/_Tulajdonságok..."
+msgstr "_Tulajdonságok"
 
-#: panel/controls_dialog.c:209 panel/controls.c:691
-#, fuzzy
+#: panel/controls_dialog.c:209
+#: panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"Egy elem eltávolítása a legördülő menüjét is eltávolítja.\n"
-"\n"
-"Biztosan törölni akarja ezt az elemet?"
+msgstr "Az elem eltávolítása a menüjét is eltávolítja."
 
-#: panel/item_dialog.c:123 panel/item_dialog.c:551
+#: panel/item_dialog.c:123
+#: panel/item_dialog.c:551
 msgid "Select command"
 msgstr "Parancs kiválasztása"
 
@@ -62,11 +60,11 @@ msgstr "Indításkor _figyelmeztetés bekapcsolása"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
-msgstr "Egyéb ikon"
+msgstr "Más ikon"
 
 #: panel/item_dialog.c:622
 msgid "Drag file onto this frame to change the icon"
-msgstr "Az ikon megváltoztatásához húzza erre a keretre a fájlt"
+msgstr "Húzd a fájlt e keretre az ikon megváltoztatásához"
 
 #: panel/item_dialog.c:917
 msgid "Caption:"
@@ -82,21 +80,22 @@ msgstr "Menü csatolása az indítóhoz"
 
 #: panel/item_dialog.c:1194
 msgid "Change menu item"
-msgstr "Menüelem megváltoztatása"
+msgstr "Menüelem módosítása"
 
 #. add buttons
-#: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
+#: panel/item_dialog.c:1200
+#: panel/controls.c:728
 msgid "_Remove"
-msgstr "/Tö_rlés a panelről"
+msgstr "Tö_rlés"
 
-#: panel/item_dialog.c:1212 panel/item.c:668
+#: panel/item_dialog.c:1212
+#: panel/item.c:668
 msgid "Launcher"
-msgstr "Panel"
+msgstr "Indító"
 
 #: panel/item.c:496
 msgid "Click mouse button 3 to change item"
-msgstr "Az elem megváltoztatásához kattintson a harmadik egérgombra"
+msgstr "Az elem módosításához kattints a 2. egérgombra"
 
 #: panel/item.c:521
 msgid "Add launcher"
@@ -108,10 +107,10 @@ msgstr "Panelra helyezés"
 
 #: panel/main.c:121
 msgid "Are you sure you want to exit?"
-msgstr "Biztosan ki akar lépni?"
+msgstr "Biztosan ki akarsz lépni?"
 
 #: panel/main.c:401
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -123,48 +122,54 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, verzió %s\n"
-"Az Xfce Munkakörnyezet része\n"
-"http://www.xfce.org\n"
+"\n"
+" Az Xfce Panel\n"
+" Verzió: %s\n"
+" Az Xfce Munkakörnyezet része\n"
+" http://www.xfce.org\n"
+"\n"
+" Licenc: GNU GPL.\n"
+"\n"
 
 #: panel/main.c:488
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: Sikeres indulás folyamatkezelés nélkül"
 
 #: panel/main.c:493
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: Sikeres indulás folyamatkezeléssel"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "Nem sikerült lérehozni ezt a panelelemet: \"%s\"."
 
-#: panel/controls.c:723 panel/panel.c:585
-#, fuzzy
+#: panel/controls.c:723
+#: panel/panel.c:585
 msgid "_Properties..."
-msgstr "/_Tulajdonságok..."
+msgstr "_Tulajdonságok..."
 
-#: panel/controls.c:737 panel/panel.c:575
-#, fuzzy
+#: panel/controls.c:737
+#: panel/panel.c:575
 msgid "Add _new item"
-msgstr "/_Panelra helyezés"
+msgstr "Új _elem hozzáadása"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
 msgstr "Ennek az elemnek nincsenek beállítási lehetőségei"
 
-#: panel/panel.c:566 panel/panel.c:980 settings/xfce_settings_plugin.c:86
+#: panel/panel.c:566
+#: panel/panel.c:980
+#: settings/xfce_settings_plugin.c:86
 #: settings/xfce_settings_dialog.c:449
 msgid "Xfce Panel"
 msgstr "Xfce panel"
 
 #: panel/panel.c:590
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/Xfce _névjegye"
+msgstr "Xfce _névjegy"
 
 #: panel/panel.c:595
 #, fuzzy
@@ -172,18 +177,16 @@ msgid "_Help"
 msgstr "/_Súgó"
 
 #: panel/panel.c:604
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/Képernyő_zár"
+msgstr "Képernyő_zár"
 
 #: panel/panel.c:609
 msgid "_Restart"
-msgstr ""
+msgstr "_Újraindítás"
 
 #: panel/panel.c:618
-#, fuzzy
 msgid "E_xit"
-msgstr "/_Kilépés"
+msgstr "_Kilépés"
 
 #: panel/icons.c:63
 msgid "Default"
@@ -259,7 +262,7 @@ msgstr "Nagy"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "Óriás"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -299,7 +302,7 @@ msgstr "Legördülő menü helye:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "Mindig felül:"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
@@ -311,23 +314,17 @@ msgstr "Xfce panel beállításai"
 
 #: settings/xfce_settings_dialog.c:476
 msgid "Appearance"
-msgstr "Külső megjelenés"
+msgstr "Megjelenés"
 
 #: settings/xfce_settings_dialog.c:491
 msgid "Behaviour"
 msgstr "Láthatóság"
 
 #. Use format characters from strftime(3)
-#. * to get the proper string for your locale.
-#. * I used these:
-#. * %A  : full weekday name
 #. * %d  : day of the month
-#. * %B  : full month name
-#. * %Y  : four digit year
-#.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr ""
+msgstr "%A, %d %B %Y"
 
 #: plugins/clock/clock.c:429
 msgid "Clock type:"
@@ -335,11 +332,11 @@ msgstr "Óra jellege:"
 
 #: plugins/clock/clock.c:442
 msgid "Analog"
-msgstr "analóg"
+msgstr "Analóg"
 
 #: plugins/clock/clock.c:446
 msgid "Digital"
-msgstr "digitális"
+msgstr "Digitális"
 
 #: plugins/clock/clock.c:450
 msgid "LED"
@@ -371,19 +368,19 @@ msgstr "Xfce Óra"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "Sorok száma:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "Oszlopok száma:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
-msgstr "Munkaterületváltó"
+msgstr "Grafikus lapozó"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
-msgstr "Munkaterületváltó"
+msgstr "Munkaterület-váltó"
 
 #: plugins/systembuttons/systembuttons.c:85
 msgid ""
@@ -429,9 +426,8 @@ msgstr "2. gomb:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/_Súgó"
+msgstr "Rejt"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -446,14 +442,12 @@ msgid "Mail box:"
 msgstr "Postaláda:"
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "Levelező program:"
+msgstr "Új levél parancs:"
 
 #: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "A panelen levő gomb megnyomásakor futtatandó parancs"
+msgstr "Új levél érkezésekor futtatandó parancs"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
@@ -468,123 +462,120 @@ msgstr "Gyakoriság (másodperc):"
 msgid "Mail checker"
 msgstr "Új levelek keresése"
 
-#~ msgid "Remove"
-#~ msgstr "Eltávolítás"
+#: xftaskbar/plugin/xftaskbar_plugin.c:278
+#: xftaskbar/plugin/xftaskbar_plugin.c:285
+#: xftaskbar/plugin/xftaskbar_plugin.c:533
+msgid "Taskbar"
+msgstr "Feladatsáv"
 
-#~ msgid "Show two buttons:"
-#~ msgstr "Két gomb megjelenítése:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:298
+msgid "Position"
+msgstr "Helyzet"
 
-#~ msgid "Change item"
-#~ msgstr "Elem megváltoztatása"
+#: xftaskbar/plugin/xftaskbar_plugin.c:306
+#, fuzzy
+msgid "_Top"
+msgstr "Fent"
 
-#~ msgid "Menu:"
-#~ msgstr "Menü:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:313
+#, fuzzy
+msgid "_Bottom"
+msgstr "Lent"
 
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce panel"
+#: xftaskbar/plugin/xftaskbar_plugin.c:320
+msgid "Alignment"
+msgstr "Igazítás"
 
-#~ msgid "/Add _new item"
-#~ msgstr "/_Panelra helyezés"
+#: xftaskbar/plugin/xftaskbar_plugin.c:329
+msgid "_Left"
+msgstr "Balra"
 
-#~ msgid "/_Properties..."
-#~ msgstr "/_Tulajdonságok..."
+#: xftaskbar/plugin/xftaskbar_plugin.c:336
+msgid "_Center"
+msgstr "Középre"
 
-#~ msgid "Select icon"
-#~ msgstr "Ikon kiválasztása"
+#: xftaskbar/plugin/xftaskbar_plugin.c:343
+msgid "_Right"
+msgstr "Jobbra"
 
-#~ msgid "Icon:"
-#~ msgstr "Ikon:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:350
+msgid "Autohide"
+msgstr "Automatikus elrejtés"
 
-#~ msgid "Icon Preview"
-#~ msgstr "Ikon előnézet"
+#: xftaskbar/plugin/xftaskbar_plugin.c:354
+msgid "Auto _hide taskbar"
+msgstr "Feladatsáv automatikus rejtése"
 
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Az ablakkezelő úgy tűnik, nem támogatja az új ablakkezelő tippeket, "
-#~ "ahogyan meghatározták a http://www.freedesktop.org-on.\n"
-#~ "Bizonyos Xfce szolgáltatások nem úgy működhetnek, ahogyan eredetileg "
-#~ "szánták."
+#: xftaskbar/plugin/xftaskbar_plugin.c:359
+msgid "Size"
+msgstr "Méret"
 
-#~ msgid "/_Settings manager"
-#~ msgstr "/_Beállításkezelő"
+#: xftaskbar/plugin/xftaskbar_plugin.c:368
+msgid "Height :"
+msgstr "Magasság:"
 
-#~ msgid "Tiny"
-#~ msgstr "Apró"
+#: xftaskbar/plugin/xftaskbar_plugin.c:403
+msgid "Width:"
+msgstr "Szélesség:"
 
-#~ msgid "Icon theme:"
-#~ msgstr "Ikontéma:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:452
+msgid "Tasks"
+msgstr "Programok"
 
-#~ msgid "Panel layer:"
-#~ msgstr "Panel átlapolása:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:460
+msgid "Show tasks from _all workspaces"
+msgstr "Feladatok mutatása v_alamennyi munkaterületről"
 
-#~ msgid "Normal"
-#~ msgstr "Normál"
+#: xftaskbar/plugin/xftaskbar_plugin.c:465
+msgid "Always _group tasks"
+msgstr "Feladatok csoportosítása mindi_g"
 
-#~ msgid "Center the panel:"
-#~ msgstr "Panel középre igazítása:"
+#: xftaskbar/plugin/xftaskbar_plugin.c:470
+msgid "Show application _names"
+msgstr "Program_nevek mutatása"
 
-#~ msgid "Set"
-#~ msgstr "Beállítás"
+#: xftaskbar/plugin/xftaskbar_plugin.c:475
+msgid "Pager"
+msgstr "Lapozó"
 
-#~ msgid "Position"
-#~ msgstr "Elhelyezés"
+#: xftaskbar/plugin/xftaskbar_plugin.c:479
+msgid "Show _pager in taskbar"
+msgstr "Lapozó a feladatsávon"
 
-#~ msgid "Sunday"
-#~ msgstr "vasárnap"
+#: xftaskbar/plugin/xftaskbar_plugin.c:484
+msgid "Notification area"
+msgstr "Értesítési terület"
 
-#~ msgid "Monday"
-#~ msgstr "hétfő"
+#: xftaskbar/plugin/xftaskbar_plugin.c:488
+msgid "Show _system tray in taskbar"
+msgstr "Rendszertálca a feladatsávon"
 
-#~ msgid "Tuesday"
-#~ msgstr "kedd"
+#: xftaskbar/xftaskbar.c:137
+msgid "Cannot get initial style"
+msgstr "Nem elérhető az eredeti téma"
 
-#~ msgid "Wednesday"
-#~ msgstr "szerda"
+#: xftaskbar/xftaskbar.c:260
+msgid "There is already a system tray running on this screen"
+msgstr "Már fut egy rendszer panel ezen a képernyőn"
 
-#~ msgid "Thursday"
-#~ msgstr "csütörtök"
+#: xftaskbar/xftaskbar.c:268
+#, c-format
+msgid "Unable to register system tray: %s"
+msgstr "Nem lehet bejegyezni a panelt: %s"
 
-#~ msgid "Friday"
-#~ msgstr "péntek"
+#: xftaskbar/xftaskbar.c:467
+msgid "This should not happen"
+msgstr "Ennek nem szabadna megtörténnie"
 
-#~ msgid "Saturday"
-#~ msgstr "szombat"
+#: xftaskbar/xftaskbar.c:592
+msgid "Cannot get default screen\n"
+msgstr "Az alapértelmezett képernyő megnyitása sikertelen\n"
 
-#~ msgid "January"
-#~ msgstr "január"
+#: xftaskbar/xftaskbar.c:681
+msgid "Cannot connect to session manager"
+msgstr "Nem lehet a munkamenet-kezelőhöz csatlakozni"
 
-#~ msgid "February"
-#~ msgstr "február"
+#: xftaskbar/xftaskbar.c:694
+msgid "Cannot create MCS client channel"
+msgstr "Nem lehet MCS ügyfélcsatornát létrehozni"
 
-#~ msgid "March"
-#~ msgstr "március"
-
-#~ msgid "April"
-#~ msgstr "április"
-
-#~ msgid "May"
-#~ msgstr "május"
-
-#~ msgid "June"
-#~ msgstr "június"
-
-#~ msgid "July"
-#~ msgstr "július"
-
-#~ msgid "August"
-#~ msgstr "augusztus"
-
-#~ msgid "September"
-#~ msgstr "szeptember"
-
-#~ msgid "October"
-#~ msgstr "október"
-
-#~ msgid "November"
-#~ msgstr "november"
-
-#~ msgid "December"
-#~ msgstr "december"
