--- a/po/hu.po
+++ b/po/hu.po
@@ -34,7 +34,7 @@ msgstr "Helyzet:"
 
 #: panel/controls_dialog.c:155
 msgid "Item properties"
-msgstr "_Tulajdonságok"
+msgstr "Tulajdonságok"
 
 #: panel/controls_dialog.c:209
 #: panel/controls.c:691
