Use intltool for .desktop files.
(Old svn revision: 4313)

--- a/README
+++ b/README
@@ -39,13 +39,16 @@ please read the HACKING, NOTES and TODO files in the top source directory.
 panel/
 	the xfce4 panel code.
 
+taskbar/
+	xfce4-taskbar
+
+iconbox/
+	xfce4-iconbox
+
 settings/
 	the mcs settings manager dialog for global settings.
 
 plugins/
-	panel plugins, clock, pager, mailcheck, etc.
-
-themes/
-	icon themes
+	panel plugins: clock, pager, mailcheck, etc.
 
 
