update zh_CN translations
(Old svn revision: 4324)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-29 11:29+0200\n"
-"PO-Revision-Date: 2004-09-28 01:05-0700\n"
+"PO-Revision-Date: 2005-01-24 16:02+0100\n"
 "Last-Translator: Yongtao Yang <yongtao.yang@telia.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr "位置："
 
 #: panel/controls_dialog.c:155
 msgid "Item properties"
-msgstr "条目属性(_P)..."
+msgstr "条目属性"
 
 #: panel/controls_dialog.c:209 panel/controls.c:691
 msgid "Removing the item will also remove its popup menu."
@@ -46,11 +46,11 @@ msgstr "命令："
 
 #: panel/item_dialog.c:307
 msgid "Run in _terminal"
-msgstr "在终端中运行(_t)"
+msgstr "在终端中运行(_T)"
 
 #: panel/item_dialog.c:325
 msgid "Use startup _notification"
-msgstr "使用启动提示(_n)"
+msgstr "使用启动提示(_N)"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
